--- a/README.html
+++ b/README.html
@@ -362,7 +362,7 @@ data models.</strong></p>
 <p>Please feel free to reach out in case of any questions or bugs.</p>
 <div id="contents" class="section level2">
 <h2>Contents</h2>
-<ol start="3" style="list-style-type: decimal">
+<ol style="list-style-type: decimal">
 <li><strong>Data folder</strong>: Data on GDP and CO_2 emissions
 employed in the empirical illustration. Both datasets are available at
 <a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD">data.worldbank.org/indicator/NY.GDP.MKTP.CD</a>
@@ -392,14 +392,22 @@ simulated DGPs employed in Section 5.</li>
 <blockquote>
 <p>[!NOTE] The package <code>PAGFLReplication</code> and its
 dependencies (<code>RcppParallel</code>, <code>RcppThread</code>,
-<code>RcppArmadillo</code>, <code>ggplot2</code>) must be installed.</p>
+<code>RcppArmadillo</code>, <code>ggplot2</code>) must be installed.
+<code>PAGFLReplication</code> is not on CRAn and must be installed from
+the provided tarball.</p>
 </blockquote>
 </div>
 <div id="docker" class="section level2">
 <h2>Docker</h2>
-<p>We also provide a Docker image with all packages pre-installed and
-data uploaded for easy replicability. The image runs R 4.4.1, which was
-used to produce the results in the paper.</p>
+<p>We also provide a Dockerfile which constructs an image that,
+out-of-the-box, includes all required packages, data, and scripts for
+easy replicability. The image runs R version 4.4.1 and retrieves the
+(legacy) package versions, which were used to produce the numerical
+results in the paper.</p>
+<p>When building the image and running a container, the container is
+exposed to port 8787 (<a href="http://localhost:8787">localhost:8787</a>, RStudio Server
+default). When deploying to an environment where ports are managed
+explicitly, simply delete the 8787 reference in the Dockerfile.</p>
 </div>
 <div id="pagfl" class="section level2">
 <h2>PAGFL</h2>
